--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -35,7 +35,13 @@
     "owned_by_link": "Controlé par {address_link}",
     "connecting": "Connexion",
     "click_here": "Cliquez ici",
-    "request": "Request"
+    "request": "Demande",
+    "mortgage": "Hypothèque",
+    "mortgages": "Hypothèques",
+    "expired_at": "A expiré {time}",
+    "expires_in": "Expire {time}",
+    "expires_in_more_than_years": "Expire dans plus de 10 ans",
+    "time_left": "Temps restant"
   },
   "address": {
     "its_you": "C'est toi"
@@ -73,9 +79,6 @@
   },
   "publication": {
     "acquired_at": "Acquis à {date}",
-    "expired_at": "A expiré {time}",
-    "expires_in": "Expire {time}",
-    "expires_in_more_than_years": "Expire dans plus de 10 ans",
     "view": "Vue",
     "sold": "Vendu",
     "canceled": "Annulé"
@@ -100,8 +103,8 @@
     },
     "publication": {
       "price": "Prix",
-      "time_left": "Temps restant",
-      "buy": "Acheter"
+      "buy": "Acheter",
+      "mortgage": "Demander une hypothèque"
     },
     "owner": {
       "part_of": "Appartient à {name}",
@@ -207,7 +210,15 @@
     "buy": "Vous avez acheté {parcel_link}",
     "cancel":
       "Vous avez annulé l'offre {publication_link} sur la LAND {parcel_link}",
-    "buy_mana": "Vous avez acheté {mana} MANA"
+    "buy_mana": "Vous avez acheté {mana} MANA",
+    "mortgage_mana":
+      "Vous avez {action} à {mortgage_contract_link} pour faire fonctionner MANA par vous-même.",
+    "mortgage_rcn":
+      "Vous avez {action} à {mortgage_contract_link} pour faire fonctionner RCN par vous-même.",
+    "create_mortgage":
+      "Vous avez demandé une hypothèque pour acheter le colis {parcel_link}",
+    "cancel_mortgage":
+      "Vous annulez une hypothèque pour acheter le colis {parcel_link}"
   },
   "transaction_status": {
     "see_activity":
@@ -246,16 +257,14 @@
       "Autorise le {marketplace_contract_link} à gerer les LANDs en votre nom.",
     "authorization": "Autorisation",
     "you_approved_mortgage_mana":
-      "You have authorized the {mortgage_contract_link} to operate MANA on your behalf",
+      "Vous avez autorisé le {mortgage_contract_link} à gerer les MANA en votre nom.",
     "approve_mortgage_mana":
-      "Authorize the {mortgage_contract_link} to operate MANA on your behalf",
+      "Autorise le {mortgage_contract_link} à gerer les MANA en votre nom.",
     "you_approved_mortgage_rcn":
-      "You have authorized the {mortgage_contract_link} to operate RCN on your behalf",
+      "Vous avez autorisé le {mortgage_contract_link} à gerer les RCN en votre nom.",
     "approve_mortgage_rcn":
-      "Authorize the {mortgage_contract_link} to operate RCN on your behalf",
-    "mortgage_contract": "Mortgage contract",
-    "mortgage_mana": "You {action} the {mortgage_contract_link} to operate MANA on your behalf",
-    "mortgage_rcn": "You {action} the {mortgage_contract_link} to operate RCN on your behalf"
+      "Autorise le {mortgage_contract_link} à gerer les RCN en votre nom.",
+    "mortgage_contract": "Mortgage contract"
   },
   "transfer_mana": {
     "title": "Transférer MANA",
@@ -313,18 +322,32 @@
     "view_more": "Afficher plus"
   },
   "mortgage": {
-    "request": "Requesting a Mortgage",
-    "oracle": "Oracle contract address",
-    "amount": "Mortgage total",
-    "duration": "Mortgage duration",
-    "duration_placeholder": "Duration date for the mortgage",
-    "payable": "Payable at",
-    "payable_placeholder": "Payable date for the mortgage",
-    "interest_rate": "Intereset rate",
-    "interest_rate_placeholder": "Interest rate",
-    "punitory_rate": "Punitory interest rate",
-    "punitory_rate_placeholder": "Punitory rate",
-    "expiration": "Request expiration",
-    "expiration_placeholder": "Expiration date for the mortgage"
+    "request": "Demander une hypothèque",
+    "request_land": "Vous êtes sur le point de demander une hypothèque pour {parcel_name} évaluée dans {parcel_price}",
+    "oracle": "Adresse du contrat Oracle",
+    "amount": "Montant",
+    "amount_placeholder": "Montant à MANA",
+    "duration": "Durée",
+    "duration_placeholder": "Durée en jours",
+    "payable": "Payable à",
+    "payable_placeholder": "Payable en jours",
+    "interest_rate": "Interest rate",
+    "interest_rate_placeholder": "Taux d'intérêt",
+    "punitory_rate": "Taux d'intérêt punitif",
+    "punitory_rate_placeholder": "Taux punitif",
+    "expiration": "Demande d'expiration",
+    "expiration_placeholder": "Date d'expiration de l'hypothèque",
+    "expires_in": "Expire dans",
+    "requested": "Demandé",
+    "cancel": "Annuler l'hypothèque",
+    "errors": {
+      "amount_minimum": "Le montant doit être supérieur à {amount}",
+      "parcel_price": "Le montant requis devrait être inférieur au prix du colis",
+      "minimum_duration": "La durée devrait être supérieure à {minimum} jours",
+      "minimum_payable": "Payable à doit être supérieur à {minimum} jours",
+      "duration_gte_payable": "La durée devrait être supérieure ou égale à payable à des jours",
+      "minimum_interest_rate": "Le taux doit être supérieur à {minimum}",
+      "maximum_interest_rate": "Le taux devrait être inférieur à {maximum}"
+    }
   }
 }
