feat: add chinese and korean translations

--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -307,32 +307,32 @@
     "view_more": "더 보기"
   },
   "mortgage": {
-    "request": "Requesting a Mortgage",
-    "request_land": "You are about to request a mortgage for {parcel_name} valued in {parcel_price}",
-    "oracle": "Oracle contract address",
-    "amount": "Amount",
-    "amount_placeholder": "Amount in MANA",
-    "duration": "Duration",
-    "duration_placeholder": "Duration in days",
-    "payable": "Payable at",
-    "payable_placeholder": "Payable in days",
-    "interest_rate": "Interest rate",
-    "interest_rate_placeholder": "Interest rate",
-    "punitory_rate": "Punitory interest rate",
-    "punitory_rate_placeholder": "Punitory rate",
-    "expiration": "Request expiration",
-    "expiration_placeholder": "Expiration date for the mortgage",
-    "expires_in": "Expires in",
-    "requested": "Requested",
-    "cancel": "Cancel Mortgage",
+    "request": "모기지 신청",
+    "request_land": "{parcel_name}의 가치가있는 {parcel_name}의 모기지를 요청하려고합니다.",
+    "oracle": "오라클 계약 주소",
+    "amount": "양",
+    "amount_placeholder": "MANA의 금액",
+    "duration": "지속n",
+    "duration_placeholder": "기간 (일)",
+    "payable": "지불 할 곳 :",
+    "payable_placeholder": "일 단위로 지불 가능",
+    "interest_rate": "이자율",
+    "interest_rate_placeholder": "이자율",
+    "punitory_rate": "도살장 이자율",
+    "punitory_rate_placeholder": "처벌 비율",
+    "expiration": "만료 요청",
+    "expiration_placeholder": "모기지 만기일",
+    "expires_in": "만료",
+    "requested": "요청 됨",
+    "cancel": "모기지 취소",
     "errors": {
-      "amount_minimum": "Amount should be greater than {amount}",
-      "parcel_price": "Amount required should be less than parcel price",
-      "minimum_duration": "Duration should be greater than {minimum} days",
-      "minimum_payable": "Payable at should be greater than {minimum} days",
-      "duration_gte_payable": "Duration should be greater or equal than payable at days",
-      "minimum_interest_rate": "Rate should be greater than {minimum}",
-      "maximum_interest_rate": "Rate should be lower than {maximum}"
+      "amount_minimum": "금액은 {amount}보다 커야합니다.",
+      "parcel_price": "필요한 금액은 소포 가격보다 적어야합니다.",
+      "minimum_duration": "기간은 {minimum} 일 이상이어야합니다.",
+      "minimum_payable": "지불 가능 시간은 {minimum} 일 이상이어야합니다.",
+      "duration_gte_payable": "기간은 며칠에 지불 가능한 것보다 크거나 같아야합니다.",
+      "minimum_interest_rate": "비율은 {minimum}보다 커야합니다.",
+      "maximum_interest_rate": "비율은 {maximum}보다 낮아야합니다."
     }
   }
 }
