--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -294,32 +294,32 @@
     "view_more": "查看更多"
   },
   "mortgage": {
-    "request": "Requesting a Mortgage",
-    "request_land": "You are about to request a mortgage for {parcel_name} valued in {parcel_price}",
-    "oracle": "Oracle contract address",
-    "amount": "Amount",
-    "amount_placeholder": "Amount in MANA",
-    "duration": "Duration",
-    "duration_placeholder": "Duration in days",
-    "payable": "Payable at",
-    "payable_placeholder": "Payable in days",
-    "interest_rate": "Interest rate",
-    "interest_rate_placeholder": "Interest rate",
-    "punitory_rate": "Punitory interest rate",
-    "punitory_rate_placeholder": "Punitory rate",
-    "expiration": "Request expiration",
-    "expiration_placeholder": "Expiration date for the mortgage",
-    "expires_in": "Expires in",
-    "requested": "Requested",
-    "cancel": "Cancel Mortgage",
+    "request": "要求抵押",
+    "request_land": "您即将申请{parcel_price价值为{parcel_name}的抵押",
+    "oracle": "Oracle合同地址",
+    "amount": "量",
+    "amount_placeholder": "MANA中的金额",
+    "duration": "持续时间",
+    "duration_placeholder": "持续时间以天计",
+    "payable": "应付",
+    "payable_placeholder": "应付天数",
+    "interest_rate": "利率",
+    "interest_rate_placeholder": "利率",
+    "punitory_rate": "惩罚性利率",
+    "punitory_rate_placeholder": "惩罚率",
+    "expiration": "请求到期",
+    "expiration_placeholder": "抵押的到期日期",
+    "expires_in": "过期日期在",
+    "requested": "要求",
+    "cancel": "取消抵押",
     "errors": {
-      "amount_minimum": "Amount should be greater than {amount}",
-      "parcel_price": "Amount required should be less than parcel price",
-      "minimum_duration": "Duration should be greater than {minimum} days",
-      "minimum_payable": "Payable at should be greater than {minimum} days",
-      "duration_gte_payable": "Duration should be greater or equal than payable at days",
-      "minimum_interest_rate": "Rate should be greater than {minimum}",
-      "maximum_interest_rate": "Rate should be lower than {maximum}"
+      "amount_minimum": "金额应该大于{amount}",
+      "parcel_price": "所需金额应低于包裹价格",
+      "minimum_duration": "持续时间应该大于{minimum}天",
+      "minimum_payable": "应付时间应该大于{minimum}天",
+      "duration_gte_payable": "持续时间应该大于或等于在天付款",
+      "minimum_interest_rate": "费率应该大于{minimum}",
+      "maximum_interest_rate": "费率应低于{maximum}"
     }
   }
 }
