feat: create locations, route and action button of estate creation

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -81,6 +81,7 @@
     "actions": {
       "edit": "Edit",
       "transfer": "Transfer",
+      "create_estate": "Create Estate",
       "sell": "Sell",
       "cancel": "Cancel sale"
     },
