--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -32,7 +32,9 @@
     "owned_by": "拥有",
     "owned_by_link": "{address_link} 소유",
     "connecting": "连",
-    "click_here": "点击这里"
+    "click_here": "点击这里",
+    "loading": "载入中",
+    "address_placeholder": "例如：{address}"
   },
   "address": {
     "its_you": "是你"
@@ -79,6 +81,7 @@
     "empty_description": "这个地块没有描述",
     "actions": {
       "edit": "编辑",
+      "permissions": "权限",
       "transfer": "转让",
       "sell": "出售",
       "cancel": "取消出售"
@@ -128,8 +131,14 @@
     "recipient_address": "接收者地址",
     "unknown_error": "发生未知错误，详情如下。",
     "error_persists":
-      "如果问题仍然存在，请通过我们的{community_chat_link}与我们联系",
-    "placeholder": "例: {address}"
+      "如果问题仍然存在，请通过我们的{community_chat_link}与我们联系"
+  },
+  "parcel_manage": {
+    "manage_land": "管理LAND",
+    "give_permission": "授予更新{parcel_name}的内容的权限。",
+    "address_permission": "这个地址将能够更新这个包裹的内容。",
+    "check_address": "请仔细检查地址",
+    "address": "运营商地址"
   },
   "parcel_buy": {
     "buy_land": "购买土地",
@@ -178,6 +187,8 @@
     "edit":
       "您已为{parcel_link}地块编辑了名称\"{name}\"和描述\"{description}\"",
     "transfer": "您已将{parcel_link}转让给{owner_link}",
+    "manage": "您赋予了{address_link}权限来更新{parcel_link}的内容",
+    "manage_revoked": "您撤销了{address_link}权限，以更新{parcel_link}的内容",
     "publish": "您发布了{parcel_link}地块",
     "buy": "您买入了{parcel_link}地块",
     "cancel": "您取消了{parcel_link}上的{publication_link}",
