fix: added missing translations, disable buttons when form is pristine

--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -34,7 +34,9 @@
     "connecting": "Conectando",
     "click_here": "Pincha aquí",
     "loading": "Cargando",
-    "address_placeholder": "Ejemplo: {address}"
+    "address_placeholder": "Ejemplo: {address}",
+    "change": "Cambiar",
+    "revoke": "Revocar"
   },
   "address": {
     "its_you": "Eres tú!"
