--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -34,7 +34,9 @@
     "connecting": "Connecting",
     "click_here": "Click here",
     "loading": "Loading",
-    "address_placeholder": "Example: {address}"
+    "address_placeholder": "Example: {address}",
+    "change": "Change",
+    "revoke": "Revoke"
   },
   "address": {
     "its_you": "It's you"
